--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,13 @@
   <head>
     <link rel="stylesheet/less" href="style.less" type="text/css">
 
-    <script src="jquery.js" type="text/javascript" charset="utf-8"></script>
-    <script src="hammer.js" type="text/javascript" charset="utf-8"></script>
-    <script src="jquery.hammer.js" type="text/javascript" charset="utf-8"></script>
+    <script src="jquery.js"></script>
+    <script src="hammer.js"></script>
+    <script src="jquery.hammer.js"></script>
+    <script src="socket.io.js"></script>
 
-    <script src="colors.js" type="text/javascript" charset="utf-8"></script>
-    <script src="app.js" type="text/javascript" charset="utf-8"></script>
-
-
+    <script src="colors.js"></script>
+    <script src="app.js"></script>
 
     <script>
       less = {
