--- a/client/index.html
+++ b/client/index.html
@@ -1,19 +1,30 @@
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Snakes on a Plane</title>
+    <meta name="viewport" content="width=320, user-scalable=no">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link rel="stylesheet/less" href="style.less" type="text/css">
     <link rel="icon" type="image/png" sizes="196x196" href="favicon.png">
 
-    <script src="jquery.js"></script>
-    <script src="hammer.js"></script>
-    <script src="particles.js"></script>
-    <script src="sounds.js"></script>
-    <script src="jquery.hammer.js"></script>
+    <script src="/jquery.js"></script>
+    <script src="/hammer.js"></script>
+    <script src="/particles.js"></script>
+    <script src="/sounds.js"></script>
+    <script src="/jquery.hammer.js"></script>
     <script src="/socket.io.js"></script>
-    <script src="colors.js"></script>
-    <script src="view.js"></script>
+    <script src="/colors.js"></script>
+
+    <script src="/sockethandling.js"></script>
+    <script src="/snake.js"></script>
+    <script src="/updatesnakes.js"></script>
+    <script src="/getsnake.js"></script>
+    <script src="/drawparticles.js"></script>
+    <script src="/game.js"></script>
+    <script src="/scoreboard.js"></script>
+    <script src="/chat.js"></script>
+    <script src="/snakestrap.js"></script>
 
     <script>
       less = {
@@ -28,7 +39,6 @@
       };
     </script>
     <script src="less.js"></script>
-    <meta name="viewport" content="width=320, user-scalable=no">
   </head>
 
   <body>
