--- a/client/index.html
+++ b/client/index.html
@@ -59,10 +59,10 @@
           <div class="border"></div>
         </div>
       </div>
-      <div class="chat-ui">
-        <input type="text" placeholder="send a message"/>
-      </div>
 
+      <div class="chat-ui">
+        <input type="text" placeholder="type a message -or- 'name blah' to change name"/>
+      </div>
 
       <div class="keys-helper">
         <div class="command">
