Bunch of changes related to snake name stuff.

--- a/client/index.html
+++ b/client/index.html
@@ -49,9 +49,9 @@
       <div class="winning-snake">BOB WINS</div>
 
       <div class="leader">
-        <span class="label">LEADER</span>
+        <span class="label name-label">LEADER &rarr; <span class="leader-name"></span></span>
         <div class="leader-boxes"></div>
-        <span class="label">WIN</span>
+        <span class="label win-label">WIN</span>
       </div>
 
       <div class="board-wrapper">
@@ -61,7 +61,7 @@
       </div>
 
       <div class="chat-ui">
-        <input type="text" placeholder="type a message -or- 'name blah' to change name"/>
+        <input type="text" placeholder='Chat or type "name yourname" to change your name'/>
       </div>
 
       <div class="keys-helper">
@@ -78,7 +78,7 @@
         </div>
 
         <div class="command">
-          <div class="single-key enter-key">Enter</div> Chat
+          <div class="single-key enter-key">Enter</div> Chat or Change Name
         </div>
       </div>
 
