added max chat and max name length

--- a/client/index.html
+++ b/client/index.html
@@ -61,7 +61,7 @@
       </div>
 
       <div class="chat-ui">
-        <input type="text" placeholder='Chat or type "name yourname" to change your name'/>
+        <input type="text" maxlength="50" placeholder='Chat or type "name yourname" to change your name'/>
       </div>
 
       <div class="keys-helper">
