I think i fixed a bunch of stuff!

--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,7 @@
       <div class="board-wrapper">
         <div class="board">
           <div class="border"></div>
+          <div class="grid-overlay"></div>
         </div>
       </div>
 
@@ -72,22 +73,18 @@
           <div class="single-key">&rarr;</div>
           Move
         </div>
-
         <div class="command">
           <div class="single-key">B</div> Bomb
         </div>
-
         <div class="command">
           <div class="single-key enter-key">Enter</div> Chat or Change Name
         </div>
       </div>
 
-
     </div>
 
     <div mode="winner" class="hidden">
       <div class="scoreboard">
-
         <h1>Scores</h1>
         <ul>
           <li><span class="name">Bob</span><span class="points">10</span></li>
