--- a/client/index.html
+++ b/client/index.html
@@ -85,7 +85,7 @@
 
     <div mode="winner" class="hidden">
       <div class="scoreboard">
-        <h1>Scores</h1>
+        <h1>Games Won</h1>
         <ul>
           <li><span class="name">Bob</span><span class="points">10</span></li>
         </ul>
