Name change UI separate from chat now. Added snake color to the scoreboard. Font styling changes.

--- a/client/index.html
+++ b/client/index.html
@@ -77,7 +77,10 @@
           <div class="single-key">B</div> Bomb
         </div>
         <div class="command">
-          <div class="single-key enter-key">Enter</div> Chat or Change Name
+          <div class="single-key">N</div> Change Name
+        </div>
+        <div class="command">
+          <div class="single-key enter-key">Enter</div> Chat
         </div>
       </div>
 
