Weird warp stuff

--- a/client/index.html
+++ b/client/index.html
@@ -46,7 +46,7 @@
 
     <div mode="game" class="hidden">
 
-      <div class="winning-snake">BOB WINS</div>
+      <div class="winning-snake">BOB WINS!</div>
 
       <div class="leader">
         <span class="label name-label">LEADER &rarr; <span class="leader-name"></span></span>
@@ -71,7 +71,7 @@
           <div class="single-key">&uarr;</div>
           <div class="single-key">&darr;</div>
           <div class="single-key">&rarr;</div>
-          Move
+          Move, Hold to Charge Boost
         </div>
         <div class="command">
           <div class="single-key">B</div> Bomb
