Fixed chat bug, decreased bomb wait time, increased turbo charge.

--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
     <script src="/game.js"></script>
     <script src="/scoreboard.js"></script>
     <script src="/chat.js"></script>
-    <script src="/handlekeydown.js"></script>
+    <script src="/handlekeys.js"></script>
     <script src="/snakestrap.js"></script>
 
     <script>
@@ -62,7 +62,7 @@
       </div>
 
       <div class="chat-ui">
-        <input type="text" maxlength="50" placeholder='Chat or type "name yourname" to change your name'/>
+        <input type="text" maxlength="25" placeholder='Chat or type "name yourname" to change your name'/>
       </div>
 
       <div class="keys-helper">
