Removed some files

--- a/client/index.html
+++ b/client/index.html
@@ -9,10 +9,9 @@
     <link rel="icon" type="image/png" sizes="196x196" href="favicon.png">
 
     <script src="/jquery.js"></script>
-    <script src="/hammer.js"></script>
+    <script src="/effects.js"></script>
     <script src="/particles.js"></script>
     <script src="/sounds.js"></script>
-    <script src="/jquery.hammer.js"></script>
     <script src="/socket.io.js"></script>
     <script src="/colors.js"></script>
 
