--- a/client/index.html
+++ b/client/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=320, user-scalable=no">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet/less" href="style.less" type="text/css">
-    <link rel="icon" type="image/png" sizes="196x196" href="favicon.png">
+    <link rel="stylesheet/less" href="less/style.less" type="text/css">
+    <link rel="icon" type="image/png" sizes="196x196" href="images/favicon.png">
 
-    <script src="/jquery.js"></script>
-    <script src="/effects.js"></script>
-    <script src="/particles.js"></script>
-    <script src="/sounds.js"></script>
     <script src="/socket.io.js"></script>
-    <script src="/colors.js"></script>
+
+    <script src="lib/jquery.js"></script>
+    <script src="lib/effects.js"></script>
+    <script src="lib/particles.js"></script>
+    <script src="lib/sounds.js"></script>
+    <script src="lib/colors.js"></script>
 
     <script src="/sockethandling.js"></script>
     <script src="/snake.js"></script>
@@ -23,8 +24,8 @@
     <script src="/game.js"></script>
     <script src="/scoreboard.js"></script>
     <script src="/chat.js"></script>
-    <script src="/handlekeys.js"></script>
-    <script src="/snakestrap.js"></script>
+    <script src="/handle-keys.js"></script>
+    <script src="/handle-events.js"></script>
 
     <script>
       less = {
@@ -38,7 +39,7 @@
         rootpath: ":/a.com/"
       };
     </script>
-    <script src="less.js"></script>
+    <script src="lib/less.js"></script>
   </head>
 
   <body>
