--- a/touchpad/index.html
+++ b/touchpad/index.html
@@ -4,7 +4,7 @@
     <script src="/socket.io.js"></script>
     <script src="pad.js"></script>
     <link rel="stylesheet" href="style.css" type="text/css" media="screen">
-    <meta name="viewport" content="width=320, user-scalable=no">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 
     <title>This is the Pad</title>
   </head>
