--- a/touchpad/index.html
+++ b/touchpad/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="/jquery.js"></script>
+    <script src="/lib/jquery.js"></script>
     <script src="/socket.io.js"></script>
     <script src="pad.js"></script>
     <link rel="stylesheet" href="style.css" type="text/css" media="screen">
