Some fixes & cleanup.

--- a/touchpad/index.html
+++ b/touchpad/index.html
@@ -5,8 +5,7 @@
     <script src="pad.js"></script>
     <link rel="stylesheet" href="style.css" type="text/css" media="screen">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-
-    <title>This is the Pad</title>
+    <title>Game pad for Snakes on a Plane</title>
   </head>
   <body>
     <div class="console"></div>
@@ -29,13 +28,6 @@
         </div>
       </div>
 
-      <div class="button" direction="up"></div><br/>
-      <div class="button" direction="left"></div>
-      <div class="button" direction="right"></div></br>
-      <div class="button" direction="down"></div>
-      <div class="button" direction="bomb"></div>
-
-      <div class="button beacon">!!!</div>
     </div>
   </body>
 </html>
