--- a/client/index.html
+++ b/client/index.html
@@ -8,24 +8,24 @@
     <link rel="stylesheet/less" href="less/style.less" type="text/css">
     <link rel="icon" type="image/png" sizes="196x196" href="images/favicon.png">
 
-    <script src="/socket.io.js"></script>
+    <script src="/socket.io.js"></script>       <!-- Websockets library -->
 
-    <script src="lib/jquery.js"></script>
-    <script src="lib/effects.js"></script>
-    <script src="lib/particles.js"></script>
-    <script src="lib/sounds.js"></script>
-    <script src="lib/colors.js"></script>
+    <script src="lib/jquery.js"></script>       <!-- jQuery! -->
+    <script src="lib/effects.js"></script>      <!-- Visual effects, like explosions -->
+    <script src="lib/particles.js"></script>    <!-- Powers all of the particle effects -->
+    <script src="/drawparticles.js"></script>   <!-- Animates all the particles in the game -->
+    <script src="lib/sounds.js"></script>       <!-- Loads and plays sounds -->
+    <script src="lib/colors.js"></script>       <!-- List of colors snakes can use -->
 
-    <script src="/sockethandling.js"></script>
-    <script src="/snake.js"></script>
-    <script src="/updatesnakes.js"></script>
-    <script src="/getsnake.js"></script>
-    <script src="/drawparticles.js"></script>
-    <script src="/game.js"></script>
-    <script src="/scoreboard.js"></script>
-    <script src="/chat.js"></script>
-    <script src="/handle-keys.js"></script>
-    <script src="/handle-events.js"></script>
+    <script src="/sockethandling.js"></script>  <!-- Hanldes socket events sent from the server -->
+    <script src="/snake.js"></script>           <!-- Hanldes socket events sent from the server -->
+    <script src="/updatesnakes.js"></script>    <!-- Updates snakes in the game to match server state -->
+    <script src="/getsnake.js"></script>        <!-- Returns a snake, based on it's ID -->
+    <script src="/game.js"></script>            <!-- Runs the main game loop -->
+    <script src="/scoreboard.js"></script>      <!-- Displays the score between rounds -->
+    <script src="/chat.js"></script>            <!-- Send chat, and change name events to server -->
+    <script src="/handle-keys.js"></script>     <!-- Figures out what to do when keys are pressed -->
+    <script src="/handle-events.js"></script>   <!-- Defines all of the key listener events -->
 
     <script>
       less = {
